--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
-apache-libcloud>=1.0.0rc1
+ # apache-libcloud>=1.0.0rc1
+git+https://github.com/dddrew/repo.git@v1.4.0#egg=apache-libcloud
 click>=6.2
